<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.sarge.lib</groupId>
  <artifactId>lib</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <name>Library</name>
  <description>Common library and utilities</description>
  <build>
<!--     <sourceDirectory>src</sourceDirectory> -->
<!--     <testSourceDirectory>test</testSourceDirectory> -->
<!--     <testResources> -->
<!--       <testResource> -->
<!--         <directory>test</directory> -->
<!--         <excludes> -->
<!--           <exclude>**/*.java</exclude> -->
<!--         </excludes> -->
<!--       </testResource> -->
<!--     </testResources> -->
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
    <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.9.1</version>
      </plugin>
    </plugins>
  </reporting>
  <dependencies>
<dependency>
	<groupId>junit</groupId>
	<artifactId>junit</artifactId>
	<version>4.11</version>
</dependency>
            		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>1.9.5</version>
		</dependency>
	</dependencies>
</project>